# PostgreSQL-Database-for-Properties-in-Buffalo

./: README.md  README.txt  load.ipynb  load.sql
SQL/:  QUERY EXECUTION ANALYSIS.sql  Database Objects.sql  Sample select queries.sql  data manipulation.sql  index.sql
UI/: TEST.PY  book_keep.py  data.py  fetch_db.py  main.py  parse.py  pyproject.toml
UI/.upm/: store.json
UI/sql/: select.sql
UI/static/: ajax_requests.js  home.css  home.js  indexedDB.js  login.css  login.js  nav-bar.css  nav-bar.js  script.js  side_bar.css  side_bar.js  slider.css
UI/templates/: home.html  login.html  slider.html
