[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
pandas = "^1.2.3"
plotly = "^4.14.3"
sklearn = "^0.0"
geopandas = "^0.9.0"
ipython = "^7.22.0"
splot = "^1.1.3"
esda = "^2.3.6"
python-clean-architecture = "^0.0.6"
seaborn = "^0.11.1"
pip = "^21.0.1"
bottle = "^0.12.19"
app = "^0.0.1"
